# RomiRobot

./: .bumpversion.toml  .gitattributes  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
app/: CMakeLists.txt  RomiRobot_app.cpp
cmake/: toolchain-armv7-linux-gnueabihf.cmake
doc/: CMakeLists.txt  conf.py  index.rst
include/RomiRobot/: RomiRobot.h  RomiRobot.hpp
scripts/: package_sysroot.py
src/: CMakeLists.txt  RomiRobot.c  RomiRobot.cpp
src/cmake/: version.cmake
tests/: CMakeLists.txt  RomiRobot_t.cpp
